# app/models/line_item.rb
@@ -2,5 +2,5 @@ class LineItem < ApplicationRecord
   belongs_to :order
   belongs_to :item
 
-  PERMIT_COLUMNS = [:user_id, :item_id, :quantity].freeze
+  PERMIT_COLUMNS = [:item_id, :quantity].freeze
 end
